--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
 <body dir="rtl">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+      <p>If you are not redirected automatically, follow this <a href="http://www.malka-engel.com/">link</a>.</p>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
